[gd_scene load_steps=2 format=3 uid="uid://cnd5nqtty8hk3"]

[ext_resource type="Script" path="res://Scenes/Boss/RabiKing/b_health.gd" id="1_li20w"]

[node name="Boss_health" type="Node2D"]
script = ExtResource("1_li20w")
max_health = 700

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FlashyTime" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FlashyTime" to="." method="_on_flashy_time_timeout"]
